style.css
/*
Theme Name:   SemPress Child
Author:       Scott Killen
Author URI:   https://killentime.com
Template:     sempress
Version:      1.0.0
License:      GNU General Public License v2 or later
License URI:  http://www.gnu.org/licenses/gpl-2.0.html
Tags:         custom-menu, custom-colors, custom-header, custom-background, custom-logo, sticky-post, microformats, rtl-language-support, translation-ready, full-width-template, post-formats, threaded-comments, right-sidebar, theme-options, two-columns, one-column, editor-style, featured-images, blog, news
Text Domain:  sempresschild
*/

* {
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

a {
  color: var(--color-tx-normal);
  text-decoration: underline;
  transition: color 0;
}

a:hover {
  color: var(--color-action);
  border-color: var(--color-action);
}

a.plain,
a.muted {
  text-decoration: none;
}

tr {
  border-bottom: 1px solid var(--color-ui-active);
  transition: border-bottom 1s;
}

body {
  text-shadow: none;
  transition: background-image 1s;
  background-image: url('https://imagedelivery.net/0XfRl_9i2twIzyWa9HYA4g/30673316-3692-42fd-bf89-48e1cacae200/usercontent');
  background-attachment: fixed;
  background-size: cover;
}

[theme='dark'] body {
  background-image: url('https://imagedelivery.net/0XfRl_9i2twIzyWa9HYA4g/a7fc84dd-89ca-4b07-f14f-592bfd630900/usercontent');
}

#site-title {
  font-weight: var(--fw-heading);
}

#site-title a {
  text-shadow: 2px 2px rgba(0, 0, 0, 0.2);
}

#site-title a:hover {
  text-shadow: 4px 4px rgba(0, 0, 0, 0.8);
}

#site-description {
  font-weight: 400;
}

#access,
.widget {
  border-bottom-color: var(--color-tx-muted);
  transition: border-bottom-color 1s;
  box-shadow: none;
}

article.page,
article.post,
article.attachment {
  backdrop-filter: blur(10px);
  -webkit-backdrop-filter: blur(10px);
  background-color: rgba(var(--color-bg-primary-rgb), 0.5);
  box-shadow: rgba(0, 0, 0, 0.2) 0 4px 2px -2px;
  border-radius: 5px;
  border-width: 0;
}

.blog-cover {
  border-radius: 5px 5px 0 0;
  height: 15rem;
  box-shadow: inset rgba(0, 0, 0, 0.2) 0 64px 64px 16px;
}

.widget {
  margin-bottom: 2em;
  font-family: var(--font-ui);
}

.widget:not(.widget_search) {
  backdrop-filter: blur(10px);
  -webkit-backdrop-filter: blur(10px);
  background-color: rgba(var(--color-bg-primary-rgb), 0.3);
  border-color: var(--color-ui-normal);
  transition: border-color 1s, background-color 1s;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
  border-radius: 4px;
  padding: 1em;
  border-width: 0;
}

.widget.widget_search {
  border-width: 0;
  margin: 0;
  padding-bottom: 1.5em;
}

[type='search']:focus {
  color: var(--color-tx-normal);
  background-color: var(--color-bg-primary);
  border-color: #b1cdb1;
  outline: 0;
  box-shadow: 0 0 0 0.25rem rgba(var(--color-tx-normal), 0.25);
}

[type='search'] {
  display: block;
  width: 100%;
  padding: 0.375rem 0.75rem;
  font-weight: 400;
  line-height: 1.5;
  color: var(--color-tx-normal);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: var(--color-bg-primary);
  background-clip: padding-box;
  border: 1px solid var(--color-ui-normal);
  border-radius: 4px;
  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

nav {
  font-family: var(--font-ui);
}

.format-quote .entry-content blockquote:first-child {
    background-color: transparent;
    border-bottom: none;
}

.entry-content,
.entry-summary,
.entry-title {
  color: var(--color-tx-normal);
  transition: color 1s;
}

header .entry-meta {
  padding-bottom: 0;
}

.entry-content {
  margin-bottom: 1em;
}

.entry-meta,
.entry-meta a {
  color: var(--color-tx-muted);
  transition: color 1s;
  font-family: var(--font-ui);
}

.entry-content a,
.entry-summary a,
.entry-title a {
  color: var(--color-bl);
  transition: color 1s;
}

.entry-content a:hover,
.entry-summary a:hover,
.entry-title a:hover {
  color: var(--color-bl-hover);
}

.sharedaddy {
  margin-top: 20px;
}

.sd-sharing {
  margin-bottom: 0 !important;
}

textarea,
input[type='text'],
input[type='password'],
input[type='datetime'],
input[type='datetime-local'],
input[type='date'],
input[type='month'],
input[type='time'],
input[type='week'],
input[type='number'],
input[type='email'],
input[type='url'],
input[type='search'],
input[type='tel'],
input[type='color'] {
  background-color: var(--color-bg-secondary);
  border-color: var(--color-ui-normal);
  transition: border-color 1s, background-color 1s;
}

.page-header .avatar {
  display: block;
  position: absolute;
  top: 5px;
  left: -85px;
}

.format-aside:before,
.format-audio:before,
.format-chat:before,
.format-gallery:before,
.format-image:before,
.format-link:before,
.format-quote:before {
  content: '';
  display: none;
}

.format-status .entry-meta .avatar {
  display:none;
}

.entry-content {
  padding-top: 15px;
}

.entry-media img.alignright {
  margin-right: 0;
}

.format-audio .entry-content {
  padding-top: 34px;
}

.format-audio .entry-summary {
  padding-top: 34px;
}

.format-audio iframe {
  margin-top: 1em;
}

.format-chat .chat-content p {
  border-radius: 18px;
  border: solid 1px;
  padding: 1em;
  box-shadow: rgba(0, 0, 0, 0.2) 0 4px 2px -2px;
  color: var(--flexoki-paper);
  font-family: var(--font-mono);
}

.format-chat .chat-content p:nth-child(odd) {
  border-bottom-right-radius: 0;
  background-color: rgba(var(--color-re-rgb), 0.7);
  border-color: var(--color-re);
  margin-left: 33%;
}

.format-chat .chat-content p:nth-child(even) {
  border-bottom-left-radius: 0;
  background-color: rgba(var(--color-bl-rgb), 0.7);
  border-color: var(--color-bl);
  margin-right: 33%;
}

.format-gallery .entry-media {
  width: 100px;
}

.format-quote .entry-header .entry-title,
.format-video .entry-header .entry-title,
.format-audio .entry-header .entry-title,
.format-image .entry-header .entry-title,
.format-quote .entry-header .entry-title a,
.format-video .entry-header .entry-title a,
.format-audio .entry-header .entry-title a,
.format-image .entry-header .entry-title a {
  font-size: 40px;
  padding-top: 25px;
}

